(lang dune 3.12)

(name AOC)

(generate_opam_files true)

(authors "Aurojit Panda")

(package
 (name AOC)
 (synopsis "Advent of code 2023")
 (allow_empty)
 (description "Nothing important here")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
